# Statistik-Kurs

./: Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt
binder/: postBuild
notebooks/: Bayesian_Statistics.ipynb  Confidence_Intervals.ipynb  Distributions.ipynb  Distributions_of_Stastisical_Inference.ipynb  Distributions_of_Statistical_Inference.ipynb  Maximum_Likelihood_Estimator.ipynb  StatisticalParameters.ipynb
